--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemailer": "^6.10.0",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "validator": "^13.11.0",
     "win-node-env": "^0.6.1",
     "xlsx": "^0.18.5",
