--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:prod": " NODE_ENV=production nodemon server.js"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
