--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^8.12.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
+    "razorpay": "^2.9.6",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
+    "uuid": "^11.1.0",
     "validator": "^13.11.0",
     "win-node-env": "^0.6.1",
     "xlsx": "^0.18.5",
