--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^8.12.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "razorpay": "^2.9.6",
     "sharp": "^0.33.5",
