--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^1.2.0",
     "express-rate-limit": "^6.9.0",
+    "firebase-admin": "^13.3.0",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
